# videoplanet_rework

./: .env.example  .env.local  .eslintrc.boundaries.json  .eslintrc.emergency.js  .eslintrc.fsd-boundaries.js  .eslintrc.styling.js  .gitignore  .lintstagedrc.js  .percy.yml  .pnpmrc  .prettierignore  .prettierrc.json  .railwayignore  .size-limit.js  .stylelintrc.js  .tsbuildinfo.precommit  .vercelignore  ACTION_PLAN.md  ACTION_PLAN_v2.md  API_ERROR_ANALYSIS_REPORT.md  CHANGELOG.md  CLAUDE.md  CODEX_MCP_SETUP_COMPLETE.md  COLLABORATION_PERFORMANCE_OPTIMIZATION_REPORT.md  CRITICAL_DEFECT_REPAIR_PLAN.md  DATA_INTEGRITY_IMPLEMENTATION_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_ARCHITECTURE_GUIDE.md  DEPLOYMENT_VERIFICATION_CHECKLIST.md  DEPLOYMENT_VERIFICATION_FINAL_REPORT.md  DEVPLAN.md  Dockerfile  E2E_COMPREHENSIVE_ANALYSIS_REPORT.md  E2E_COMPREHENSIVE_TESTING_REPORT.md  E2E_TEST_IMPLEMENTATION_REPORT.md  E2E_TEST_SUITE_COMPLETION_REPORT.md  FSD_ARCHITECTURE.md  Frontend_TDD.md  HTTP_ERROR_COMPREHENSIVE_ANALYSIS.md  IMAGE_OPTIMIZATION_REPORT.md  (+81 more)
.github/: dependabot.yml
.husky/: commit-msg  pre-commit  pre-push  prepare-commit-msg
@types/: jest-custom-matchers.d.ts
__MACOSX/: ._vridge_front
app/: globals.css  layout.tsx  not-found.tsx  page.original.tsx  page.tsx
config/: asgi.py  settings.py  settings_local.py  settings_railway.py  storages.py  urls.py  urls_health.py
core/: exceptions.py  managers.py  middleware.py  models.py  responses.py  test_error_handling.py  test_middleware.py
data_platform/: __init__.py
docs/: ADR-001-SECURITY-ERROR-ARCHITECTURE.md  (+24 more)
(+1670 files in other folders)
